# goodmap-e2e-tests

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  cypress.config.js  e2e_stress_test_config.yml  e2e_test_config.template.yml  e2e_test_config.yml  e2e_test_data.json  e2e_test_data_template.json  package-lock.json  package.json  pyproject.toml
.github/actions/start-backend/: action.yml
.github/actions/stop-backend/: action.yml
.github/scripts/: generate-perf-summary.js  start-backend.sh  stop-backend.sh
.github/workflows/: e2e-tests.yml  post-results.yml  pr-comment.yml  test-base.yml  test-comment.yml  test.yml
cypress/e2e/basic-test/: accesibility_table_test.cy.js  commons.js  go-to-my-location-test.cy.js  mobile-box-test.cy.js
cypress/e2e/stress-test/: stress_test.cy.js
cypress/support/: e2e.js  generate_stress_test_data.py
cypress/utils/: fake-location.js
scripts/: generate_stress_test_data.py
tests/: __init__.py  conftest.py  helpers.py
tests/basic/: __init__.py  test_accessibility_table.py  test_go_to_my_location.py  test_language.py  test_left_panel.py  test_left_panel_translations.py  test_location_buttons.py  test_map.py  test_mobile_box.py  test_navigation.py  test_popup.py  test_share.py
tests/stress/: __init__.py  test_stress.py
translations/en/LC_MESSAGES/: messages.po
translations/pl/LC_MESSAGES/: messages.po
